# PL1_pmtve

primitive/: CMakeLists.txt  main.cpp  primitive.cpp  primitive.hpp
primitive/u_test/: CMakeLists.txt  primitive_test.cpp
